# rf_anomaly_detection

./: .gitignore  0_data_pre_processing.ipynb  100_signature_extract_peak.py  101_signature_extract_predict.py  103_signature_evaluation.py  1_model_training.ipynb  2a_tinyml_models.ipynb  2b_advance_model.ipynb  2c_cnn_model.ipynb  3_esp32_model.ipynb  LICENSE  README.md  advance_model.ipynb  advance_model.py  autocorrelation.py  decode.py  gui.py  model_training.ipynb  realtime_anomaly_detector.py  requirements.txt  sig_autoencoders.py  sig_predict.py  sig_siamese_net.py  sig_visualize_cluster.py  signature_autoencoder.py  signature_build_model.py  signature_compare_known.py  signature_extract_feature.py  signature_predict.py  tinyml_models.ipynb
collect_rf_data/: manual_capture_decode.py  scpi_simple_harmonic.py  scpi_simple_sweep.py
helpers/: mail.py
model_deployment/: CMakeLists.txt  deploy_model.cc  rf_anomaly.cc
models/: hybrid_cnn_rnn.h5  hybrid_cnn_rnn_t10.h5
output_file/: real_time_SWEEP_REC_2024-05-19 17h15m53s.csv  real_time_SWEEP_REC_2024-05-19 17h21m00s.csv  real_time_SWEEP_REC_2024-05-19 17h44m12s.csv
